Revision history for Perl extension JavaScript::QuickJS:

0.13
- Detect at build time when linking to libatomic is necessary, and only
  link in that case.
- Allow direct enable/disable of linking to libatomic.

0.12 Mon 6 Jan 2022
- Add await() so Perl can wait until JS’s pending jobs finish.
- Make eval_module() return the JS object so chaining is easier.
- Explicitly document interfaces that return the JS object.

0.11 Sun 15 May 2022
- BREAKING CHANGE: JavaScript Functions converted to Perl now become
  instances of a new class, JavaScript::QuickJS::Function. That class
  is overloaded to act as a coderef, so MOST calling code should still
  work, but anything that expects a CODE reference will now instead find
  a blessed object.
- BUG FIX: Fix leaked scalars returned from Perl callbacks.
- Tweak discussion of memory-leak detection.
- Add missing regexp test.

0.10 Thu 12 May 2022
- Fix missing RegExp module.

0.09 Thu 12 May 2022
- Add RegExp compatibility.

0.08 Tue 26 Apr 2022
- BUG FIX: Avoid segfault when passing a function from JS to Perl.
- BUG FIX: Avoid segfault if an invalid SV is given to a Perl/JS coderef.
- BUG FIX: Free args to JS function references when call()ed.
- Set strict mode to always-on.
- Teach Perl->JSON conversion to recognize Types::Serialiser booleans.
- Warn if funcref is destroyed at global destruction.
- Document the present memory-handling weirdness. :(

0.07 Mon 25 Apr 2022
- Add ability to customize base path for ES6 module imports.

0.06 Fri 22 Apr 2022
- Fix compatibility with old Linuxes (e.g., CentOS 7 and CloudLinux 6).

0.05 Thu 7 Apr 2022
- Fix helpers() method.
- Fix memory leak when std/os/helpers failed.
- Fix bad assert check.

0.04 Mon 4 Apr 2022
- No production changes.
- Fix typo’d test from 0.03.

0.03 Mon 4 Apr 2022
- Fix number conversion in 32-bit, non-64-bit-int perls.
- Fix conversion of Perl “magic” variables to JavaScript.
- Add more tests against number conversion.