@@ -1,6 +1,7 @@
 Revision history for Perl extension JavaScript::QuickJS:
 
 0.13
+- Detect missing gmake up-front at build time.
 - Detect at build time when linking to libatomic is necessary, and only
   link in that case.
 - Allow direct enable/disable of linking to libatomic.
